src/objects/Apttus_Config2__PriceEscalator__c.object
<CustomObject>
    <description>Represents a price escalator for a price ramp</description>
    <fields>
        <fullName>Apttus_Config2__AdjustmentAmount__c</fullName>
        <description>The price adjustment amount.</description>
        <inlineHelpText>The price adjustment amount.</inlineHelpText>
        <label>Adjustment Amount</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__AdjustmentAppliesTo__c</fullName>
        <description>Indicates the price field the price adjustment should be applied to.</description>
        <inlineHelpText>Indicates the price field the price adjustment should be applied to.</inlineHelpText>
        <label>Adjustment Applies To</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Base Price</fullName>
                </value>
                <value>
                    <fullName>List Price</fullName>
                </value>
                <value>
                    <fullName>Extended Price</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__AdjustmentSource__c</fullName>
        <description>Indicates the source for the adjustment</description>
        <inlineHelpText>Indicates the source for the adjustment</inlineHelpText>
        <label>Adjustment Source</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>First Ramp</fullName>
                </value>
                <value>
                    <fullName>Previous Ramp</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__AdjustmentType__c</fullName>
        <description>The price adjustment type</description>
        <inlineHelpText>The price adjustment type</inlineHelpText>
        <label>Adjustment Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Percentage</fullName>
                </value>
                <value>
                    <fullName>% Discount</fullName>
                </value>
                <value>
                    <fullName>Discount Amount</fullName>
                </value>
                <value>
                    <fullName>% Uplift</fullName>
                </value>
                <value>
                    <fullName>% Markup</fullName>
                </value>
                <value>
                    <fullName>Markup Amount</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__PeriodNumber__c</fullName>
        <description>The period number associated with the escalator</description>
        <inlineHelpText>The period number associated with the escalator</inlineHelpText>
        <label>Period Number</label>
        <precision>3</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__PriceListItemId__c</fullName>
        <description>ID of the associated price list item</description>
        <inlineHelpText>ID of the associated price list item</inlineHelpText>
        <label>Price List Item</label>
        <referenceTo>Apttus_Config2__PriceListItem__c</referenceTo>
        <relationshipLabel>Price Escalators</relationshipLabel>
        <relationshipName>PriceEscalators</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Price Escalator</label>
    <nameField>
        <displayFormat>PE-{00000000}</displayFormat>
        <label>Escalator Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Price Escalators</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>